[package]
name = "ble_software"
version = "0.1.0"
authors = ["sleeplessmisty <danieltungren@hotmail.com>"]
edition = "2021"
resolver = "2"
description = "A wrapper for the ESP32 NimBLE Bluetooth stack."
categories = ["embedded", "hardware-support"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

std = ["esp-idf-svc/std", "once_cell/std", "bstr/std"]
no_std = ["once_cell/critical-section", "esp-idf-svc/critical-section", "bstr/alloc"]
debug = []

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false, features = ["alloc", "embassy-sync"] }

bitflags = { version = "2.4.1" }
bstr = { version = "1.8.0", default-features = false }
embassy-sync = { version = "0.6" }
heapless = "0.8.0"
num_enum = { version = "0.7", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
uuid = { version = "1", default-features = false, features = ["macro-diagnostics"] }
esp32-nimble = "0.8.0"
rand = "0.8.5" # For testing purpose

[dev-dependencies]
anyhow = "1"
esp-idf-svc = "0.49"

[build-dependencies]
anyhow = "1"
embuild = "0.32"

[patch.crates-io]
# see: https://github.com/esp-rs/espup/issues/440
clang-sys = { git = "https://github.com/taks/clang-sys.git", branch = "load_with_flags"}
